# packages/api/src/channels/channels.service.ts
@@ -7,13 +7,28 @@ export class ChannelsService {
   constructor(private channelsRepository: ChannelsRepository) {}
 
   /**
-   *
-   * @param id
-   * @returns Returns channel by ID
+   * @param joystreamChannelId
+   * @returns Returns channel by joystreamChannelId
    */
-  async get(id: string): Promise<Channel> {
-    // const result = await this.channelsRepository.query('userId', (q) => q.eq(userId).and().filter('id').eq(id))
-    const result = await this.channelsRepository.get(id)
+  async get(joystreamChannelId: string): Promise<Channel> {
+    const [result] = await this.channelsRepository.scan('id', (q) =>
+      q.filter('joystreamChannelId').eq(Number(joystreamChannelId))
+    )
+    if (!result) {
+      throw new Error(`Could not find channel with id ${joystreamChannelId}`)
+    }
+    return result
+  }
+
+  /**
+   * @param userId
+   * @returns Returns channel by userId
+   */
+  async getByUserId(userId: string): Promise<Channel> {
+    const [result] = await this.channelsRepository.query('userId', (q) => q.eq(userId))
+    if (!result) {
+      throw new Error(`Could not find user with id ${userId}`)
+    }
     return result
   }
 
